--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -32,10 +32,10 @@
 
             <ul class="nav-list" id="nav-list">
 
-                <li class="nav-list-item"><a href="#home">HOME</a></li>
+                <li class="nav-list-item"><a href="#projects-showcase-1">307 W</a></li>
 
-                <li class="nav-list-item"><a href="#images-gallery">GALLERY</a></li>
-                <li class="nav-list-item"><a href="#services"></a></li>
+                <li class="nav-list-item"><a href="#projects-showcase-2">528 W</a></li>
+                <li class="nav-list-item"><a href="#projects-showcase-3">3762 GT</a></li>
                 <li class="nav-list-item"><a href="#portfolio"></a></li>
                 <li class="nav-list-item"><a href="#about"></a></li>
 
@@ -121,8 +121,8 @@
             </div>
 
         </section>
-        
-        <section class="projects-showcase section" id="projects-showcase-2">
+
+        <section class="projects-showcase section" id="projects-showcase-3">
 
             <div class="projects-showcase-container container flex-column">
 
@@ -146,7 +146,123 @@
             </div>
 
         </section>
+
+        <section class="contact section" id="contact">
+
+            <div class="contact-container container flex-column">
+
+                <div class="contact-titles-container flex-column">
+                    <h2 class="section-title contact-title bottom">Let's get in <span>Touch</span></h2>
+                    <p class="contact-description description-regular bottom-delayed">
+                        if you have any questions, fill out the form 
+                        below and we will get back with you as soon
+                        as possible !
+                    </p>
+                </div>
+
+                <form action="#" class="contact-form grid" id="contact-form">
+
+                    <div class="contact-form-group">
+                        <label class="bottom">Name</label>
+                        <input type="text"  class="contact-form-text bottom-delayed" name="name">
+                    </div>
+
+                    <div class="contact-form-group">
+                        <label class="bottom">Phone or email</label>
+                        <input type="text"  class="contact-form-text bottom-delayed" name="email">
+                    </div>
+
+                    <div class="contact-form-group grid-item-three">
+                        <label class="bottom">Message</label>
+                        <textarea class="contact-form-text bottom-delayed" id="contact-project" name="message" required></textarea>
+                    </div>
+
+                    <div class="contact-button grid-item-four bottom">
+                        <button type="submit" class="contact-button" id="contact-button"><h4>Send form</h4><img src="/assets/IMG/arrow-icon.svg" alt="arrow-icon"></button>
+                    </div>
+
+                    <div class="contact-message" id="contact-message"></div>
+
+                </form>
+
+            </div>
+
+        </section>
     </main>
+
+
+    <!-- ============================ FOOTER ============================== -->
+    <footer class="footer section">
+
+        <div class="footer-container container flex-column">
+            <div class="footer-logo-container"><img src="/assets/IMG/footer-logo.svg" alt="Footer logo" class="footer-logo"></div>
+
+            <div class="footer-responsive-container responsive-container">
+                <div class="footer-contact-info flex-column">
+                    <h4 class="footer-contact-title ">Contact <span>Us</span></h4>
+
+                    <ul class="footer-contact-info-list flex-column">
+
+                        <li><a href="tel:8323294855" class="contact-footer-list-item"><i class="ri-phone-fill"></i><p>(832) 329 - 4855</p></a></li>
+                        <li><a href="mailto:info@jaresidentailcompany.com" class="contact-footer-list-item"><i class="ri-mail-send-fill"></i><p>info@jaresidentialcompany.com</p></a></li>
+                        <li><a href="https://www.google.com/maps/place/5334+Prudence+Dr,+Houston,+TX+77045/@29.624536,-95.462174,17z/data=!3m1!4b1!4m6!3m5!1s0x8640ebceaaed71db:0xde87307922388231!8m2!3d29.624536!4d-95.462174!16s%2Fg%2F11bw42gkgb?entry=ttu" target="_blank" class="contact-footer-list-item"><i class="ri-map-pin-5-fill"></i><p>5334 Prudence Dr, Houston TX 77045</p></a></li>
+
+                    </ul>
+                </div>
+
+                <div class="footer-site-links-container flex-column">
+
+                    <div class="site-links-group flex-column">
+                        <p class="description-medium">Services</p>
+                        <ul class="site-links-list">
+                            <li><p class="site-link"><a href="#">Drywall</a></p></li>
+                            <li><p class="site-link"><a href="#">Paint</a></p></li>
+                            <li><p class="site-link"><a href="#">Carpentry</a></p></li>
+                            <li><p class="site-link"><a href="#">Tile</a></p></li>
+                        </ul>
+                    </div>
+
+                    <div class="site-links-group flex-column">
+                        <p class="description-medium">Home</p>
+                        <ul class="site-links-list">
+                            <li><p class="site-link"><a href="#">Gallery</a></p></li>
+                            <li><p class="site-link"><a href="#">Services</a></p></li>
+                            <li><p class="site-link"><a href="#">Portafolio</a></p></li>
+                            <li><p class="site-link"><a href="#">About us</a></p></li>
+                        </ul>
+                    </div>
+
+                    <div class="site-links-group flex-column">
+                        <p class="description-medium">Gallery</p>
+                        <ul class="site-links-list">
+                            <li><p class="site-link"><a href="#">Projects</a></p></li>
+                            <li><p class="site-link"><a href="#">Contact</a></p></li>
+                        </ul>
+                    </div>
+
+                    <div class="site-links-group flex-column">
+                        <p class="description-medium">Portafolio</p>
+                        <ul class="site-links-list">
+                            <li><p class="site-link"><a href="#">Interiors</a></p></li>
+                            <li><p class="site-link"><a href="#">Contact</a></p></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-line"></div>
+
+        <div class="footer-credits-container container">
+
+            <a href="https://etxsoftware.com/" target="_blank" class="etx-software">Website by <span>ETX Software development</span><img src="/assets/IMG/Etx-logo.svg" alt="Etx logo"></a>
+
+            <h4 class="ja">J & A Residential company LLC.</h4>
+
+            <p class="copyright">&#169;<b>2024 All Rights reserved</b></p>
+        </div>
+    </footer> 
     
 
     <script src="https://unpkg.com/scrollreveal"></script>
