--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 
                 <ul class="gallery-grid-list grid">
                     <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-two.png" class="bottom" alt="About image one"></li>
-                    <li class="gallery-grid-item g-i-2"><img src="assets/IMG/gallery-three.png" class="right" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-3"><img src="assets/IMG/gallery-four.png" class="bottom" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-2"><img src="assets/IMG/gallery-three.png" class="right" alt="About image two"></li>
+                    <li class="gallery-grid-item g-i-3"><img src="assets/IMG/gallery-four.png" class="bottom" alt="About image three"></li>
                     <li class="gallery-grid-item g-i-4"><img src="assets/IMG/gallery-six.png" class="top" alt="About image four"></li>
                     <li class="gallery-grid-item g-i-5"><img src="assets/IMG/gallery-8.webp" class="right" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-6"><img src="assets/IMG/gallery-9.png" class="bottom" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-7"><img src="assets/IMG/gallery-10.png" class="left" alt="About image five"></li>
-                    <li class="gallery-grid-item g-i-8"><img src="assets/IMG/gallery-11.png" class="right" alt="About image five"></li>
+                    <li class="gallery-grid-item g-i-6"><img src="assets/IMG/gallery-9.png" class="bottom" alt="About image six"></li>
+                    <li class="gallery-grid-item g-i-7"><img src="assets/IMG/gallery-10.png" class="left" alt="About image seven"></li>
+                    <li class="gallery-grid-item g-i-8"><img src="assets/IMG/gallery-11.png" class="right" alt="About image eight"></li>
 
                 </ul>
 
@@ -195,55 +195,55 @@
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">307 W 32nd</h4>
-                        <a href="assets/pages/projects.html/#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-two.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">528 W 31st</h4>
-                        <a href="assets/pages/projects.html/#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-8.webp" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">3762 Georgetown</h4>
-                        <a href="assets/pages/projects.html/#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-15.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">307 W 32nd</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-three.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">528 W 31st</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-12.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">3762 Georgetown</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-16.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">307 W 32nd</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-1" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-five.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">528 W 31st</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-2" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-9.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
                     <div class="portfolio-card swiper-slide">
                         <h4 class="portfolio-card-title">3762 Georgetown</h4>
-                        <a href="#" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
+                        <a href="assets/pages/projects.html#projects-showcase-3" class="portfolio-card-button"><h4>View full project</h4><img src="assets/IMG/arrow-icon.svg" alt="arrow-icon"></a>
                         <img src="assets/IMG/gallery-16.png" alt="Portfolio image 1" class="portfolio-card-img">
                     </div>
 
