--- a/assets/pages/gallery.html
+++ b/assets/pages/gallery.html
@@ -24,7 +24,7 @@
 
         <nav class="navigation container">
 
-            <a href="/index.html" class="nav-logo">
+            <a href="#home" class="nav-logo">
                 <img src="/assets/IMG/Logo.svg" alt="J & A logo">
             </a>
 
@@ -32,14 +32,14 @@
 
             <ul class="nav-list" id="nav-list">
 
-                <li class="nav-list-item"><a href="#home">HOME</a></li>
+                <li class="nav-list-item"><a href="/index.html">HOME</a></li>
 
-                <li class="nav-list-item"><a href="#images-gallery">GALLERY</a></li>
-                <li class="nav-list-item"><a href="#services"></a></li>
-                <li class="nav-list-item"><a href="#portfolio"></a></li>
-                <li class="nav-list-item"><a href="#about"></a></li>
+                <li class="nav-list-item"><a href="/assets/pages/gallery.html">GALLERY</a></li>
+                <li class="nav-list-item"><a href="/index.html#services">SERVICES</a></li>
+                <li class="nav-list-item"><a href="/assets/pages/projects.html">OUR PORTFOLIO</a></li>
+                <li class="nav-list-item"><a href="/index.html#about">ABOUT US</a></li>
 
-                <li class="nav-list-item"><a href="#contact" class="nav-button">Contact Us</a></li>
+                <li class="nav-list-item"><a href="#contact" class="nav-button">CONTACT US</a></li>
 
 
             </ul>
@@ -68,7 +68,7 @@
             </div>
 
 
-            <img src="/assets/IMG/gallery-background-image.png" alt="Gallery home background image" class="home-background-image scale" id="gallery-home-background">
+            <img src="/assets/IMG/Gallery-page-background-image.png" alt="Gallery home background image" class="home-background-image scale" id="gallery-home-background">
         </section>
 
         <section class="images-gallery section" id="images-gallery">
