--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -24,7 +24,7 @@
 
         <nav class="navigation container">
 
-            <a href="/index.html" class="nav-logo">
+            <a href="#home" class="nav-logo">
                 <img src="/assets/IMG/Logo.svg" alt="J & A logo">
             </a>
 
@@ -32,14 +32,14 @@
 
             <ul class="nav-list" id="nav-list">
 
-                <li class="nav-list-item"><a href="#projects-showcase-1">307 W</a></li>
+                <li class="nav-list-item"><a href="/index.html">HOME</a></li>
 
-                <li class="nav-list-item"><a href="#projects-showcase-2">528 W</a></li>
-                <li class="nav-list-item"><a href="#projects-showcase-3">3762 GT</a></li>
-                <li class="nav-list-item"><a href="#portfolio"></a></li>
-                <li class="nav-list-item"><a href="#about"></a></li>
+                <li class="nav-list-item"><a href="/assets/pages/gallery.html">GALLERY</a></li>
+                <li class="nav-list-item"><a href="/index.html#services">SERVICES</a></li>
+                <li class="nav-list-item"><a href="/assets/pages/projects.html">OUR PORTFOLIO</a></li>
+                <li class="nav-list-item"><a href="/index.html#about">ABOUT US</a></li>
 
-                <li class="nav-list-item"><a href="#contact" class="nav-button">Contact Us</a></li>
+                <li class="nav-list-item"><a href="#contact" class="nav-button">CONTACT US</a></li>
 
 
             </ul>
@@ -61,13 +61,20 @@
 
                 <h1 class="projects-home-title section-title top">Crafted with <br><b>EXPERTISE</b></h1>
 
-                <h4 class="projects-home-subtitle top">Explore our construction Portafolio</h4>
+                <ul class="gallery-list">
+                    <li class="gallery-list-item left-delayed"><h4>DRYWALL</h4></li>
+                    <li class="gallery-list-item left-delayed"><h4>PAINT</h4></li>
+                    <li class="gallery-list-item left-delayed"><h4>CARPENTRY</h4></li>
+                    <li class="gallery-list-item left-delayed"><h4>TILE</h4></li>
+                </ul>
+
+                <h4 class="projects-home-subtitle top">Explore our interior construction Portafolio</h4>
 
                 <a href="#projects-showcase-1" class="projects-button top"><img src="/assets/IMG/arrow-icon-white.svg" alt="arrow-icon"></a>
             </div>
 
             
-            <img src="/assets/IMG/projects-background-image.png" alt="Projects background image" class="projects-background-image scale">
+            <img src="/assets/IMG/projects-background-image.png" alt="Projects background image" id="home-background-image" class="projects-background-image scale">
         </section>
 
         <section class="projects-showcase section" id="projects-showcase-1">
@@ -268,5 +275,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="/assets/ETX-routes/javascript/header.js"></script>
     <script src="/assets/ETX-routes/javascript/reusable-js.js"></script>
+    <script src="/assets/ETX-routes/javascript/projects.js"></script>
 </body>
 </html>
