--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
                 <h1 class="home-title section-title bottom-delayed"><span>ELEVATE</span> YOUR SPACE</h1>
 
                 <div class="home-info-container responsive-container">
-                    <a href="tel:8323294855" class="button button-primary left"><h4>Get a quote</h4></a>
+                    <a href="assets/pages/projects.html" class="button button-primary left"><h4>See our projects</h4></a>
+
+
+                    <div class="accent-line"></div>
 
                     <ul class="home-info-list">
                         <li class="home-list-item left-delayed"><p class="description-regular">DRYWALL</p></li>
@@ -71,7 +74,15 @@
                         <li class="home-list-item left-delayed"><p class="description-regular">TILE</p></li>
                         <li class="home-list-item left-delayed"><p class="description-regular">CARPENTRY</p></li>
                     </ul>
+
+                    <div class="home-logo-container"><img src="assets/IMG/Main-logo.svg" alt="" class="home-logo"></div>
                 </div>
+
+                <div class="home-contacts-container">
+                    <div class="home-contact-item"><i class="ri-map-pin-5-fill"></i><a href="#">5334 Prudence Dr, Houston, TX 77045</a></div>
+                    <div class="home-contact-item"><i class="ri-phone-fill"></i><a href="tel:8323294855">(832) 329 - 4855</a></div>
+                </div>
+
             </div>
 
             <video class="home-background-video scale" id="home-video" autoplay muted loop playsinline>
@@ -90,10 +101,10 @@
                 <h1 class="gallery-title section-title bottom">TRANSFORM YOUR HOME INTO SOMETHING <span>SPECTACULAR</span></h1>
 
                 <ul class="gallery-grid-list grid">
-                    <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-two.png" class="bottom" alt="About image one"></li>
+                    <li class="gallery-grid-item g-i-1"><img src="assets/IMG/gallery-background-image.png" class="bottom" alt="About image one"></li>
                     <li class="gallery-grid-item g-i-2"><img src="assets/IMG/gallery-three.png" class="right" alt="About image two"></li>
                     <li class="gallery-grid-item g-i-3"><img src="assets/IMG/gallery-four.png" class="bottom" alt="About image three"></li>
-                    <li class="gallery-grid-item g-i-4"><img src="assets/IMG/gallery-six.png" class="top" alt="About image four"></li>
+                    <li class="gallery-grid-item g-i-4"><img src="assets/IMG/projects-background-image.png" class="top" alt="About image four"></li>
                     <li class="gallery-grid-item g-i-5"><img src="assets/IMG/gallery-8.webp" class="right" alt="About image five"></li>
                     <li class="gallery-grid-item g-i-6"><img src="assets/IMG/gallery-9.png" class="bottom" alt="About image six"></li>
                     <li class="gallery-grid-item g-i-7"><img src="assets/IMG/gallery-10.png" class="left" alt="About image seven"></li>
@@ -399,6 +410,8 @@
 
     <!-- ========================================================== -->
     <!-- =========================== JAVASCRIPT LINKS =============================== -->
+     <!--=============== EMAIL JS ===============-->
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <!-- SCROLL REVEAL JS -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- SWIPER JS -->
